--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular/forms": "~21.1.0",
     "@angular/platform-browser": "~21.1.0",
     "@angular/router": "~21.1.0",
+    "@juristr/nx-tailwind-sync": "^0.0.9",
     "rxjs": "~7.8.0"
   }
 }
